# small-data-sf

./: .gitignore  README.md  dagster.yaml  pyproject.toml
.devcontainer/: Dockerfile  devconatiner.json  devcontainer.json
_completed/small_data_workshop/defs/: assets.py  jobs.py  resources.py  schedules.py  sensors.py
src/small_data_workshop/: __init__.py  constants.py
src/small_data_workshop/defs/: assets.py  jobs.py  resources.py  schedules.py  sensors.py
tests/: test_pipeline.py
