[project]
name = "small_data_workshop"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.14",
    "dagster-duckdb",
    "requests",
    "pydantic",
    "pandas",
    "sentence-transformers",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "small_data_workshop"
registry_modules = [
    "small_data_workshop.components.*",
]


