[project]
name = "small_data_workshop"
version = "0.1.0"
description = "A small data workshop using Dagster"
readme = "README.md"
requires-python = ">=3.9,<3.14"
authors = [
    {name = "Small Data SF", email = "info@example.com"},
]
keywords = ["dagster", "data-pipeline", "workshop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "dagster==1.11.14",
    "dagster-webserver",
    "dagster-dg-cli",
    "dagster-duckdb",
    "requests",
    "pydantic",
    "pandas",
    "sentence-transformers",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/small_data_workshop"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "small_data_workshop"
registry_modules = [
    "small_data_workshop.components.*",
]


